# codespaces-blank

./: .eslintrc.cjs  .gitignore  AUTHORIZATION_FIX.md  AUTOCODER_CHATBOT_README.md  BUILD.bat  BUILD_COMPLETE.md  BUILD_VERIFICATION.md  CHANGELOG.md  CMAKE_INSTALL.md  CMakeLists.txt  CODE_SIGNING.md  CODING_COMPLETE.md  COMPLETE_BUILD_STATUS.md  COMPLETION_CHECKLIST.md  CONGRATULATIONS.txt  CPP_DEVELOPMENT_GUIDE.md  DEPLOYMENT_COMPLETE.md  DOCUMENTATION.md  DOCUMENTATION_INDEX.md  FINAL_SUMMARY.md  GITHUB_AUTH_FIX.md  HYBRID_IDE_V2_COMPLETE.md  IDE_COMPLETE.md  INSTALL.md  INTEGRATION_COMPLETE.md  LICENSE  MAKE_EXE.txt  Makefile  NUMERIC_PIN_LOGIN.md  OAUTH_SETUP_GUIDE.md  OAUTH_VS_MARKETPLACE.md  PROJECT_COMPLETE.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  QUICKBUILD.md  QUICKSTART.md  README.md  README.old.md  README_V2.md  SCRIPT_GENERATOR_README.md  (+37 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
examples/: calculator.cpp  data_structures.cpp  hello_world.cpp  test_program.cpp
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: AISidebar.tsx  AutoCoderPanel.tsx  AutoInstallPanel.tsx  BuildPanel.tsx  DockerPanel.tsx  Editor.tsx  FileExplorer.tsx  PluginPanel.tsx  ScriptUploader.css  ScriptUploader.tsx  SplashScreen.tsx  SystemInfo.tsx  Toolbar.tsx  UpdatePanel.tsx
frontend/src/services/: bridge.ts
frontend/src/styles/: SplashScreen.css
include/: ai_agent_system.h  ai_api_client.h  auto_coder.h  auto_coder_chatbot.h  auto_installer.h  auto_updater.h  cloud_sync.h  code_signer.h  collaboration.h  compiler.h  debugger.h  docker_manager.h  file_operations.h  github_auth.h  github_copilot.h  ide_application.h  kubernetes_manager.h  license_verifier.h  plugin_manager.h  profiler.h  prompt_verifier.h  script_generator.h  script_verifier.h  system_info.h  webview_gtk.h  webview_host.h  webview_macos.h
scripts/: package.ps1
src/: App.jsx  ai_agent_system.cpp  ai_api_client.cpp  auto_coder.cpp  auto_coder_chatbot.cpp  auto_installer.cpp  auto_updater.cpp  cloud_sync.cpp  code_signer.cpp  collaboration.cpp  compiler.cpp  debugger.cpp  docker_manager.cpp  file_operations.cpp  github_auth.cpp  github_copilot.cpp  ide_application.cpp  ide_components.cpp  index.css  kubernetes_manager.cpp  license_verifier.cpp  main.cpp  plugin_manager.cpp  profiler.cpp  prompt_verifier.cpp  script_generator.cpp  script_verifier.cpp  system_info.cpp  webview_host.cpp
tests/: example.test.jsx
vscode-extension/: .gitignore  LICENSE  README.md  package.json
vscode-extension/src/: extension.ts
